<?xml version="1.0"?>
<package format="3">
<name>visualization_mapper</name>
<version>0.0.1</version>
<description>ROS 2 node that visualizes LiDAR data and robot pose using SDL2 for rendering.</description>
<maintainer email="riverae4@tcnj.edu">ric</maintainer>
<license>MIT</license>

<buildtool_depend>ament_cmake</buildtool_depend>

<!-- Build dependencies -->
<build_depend>rclcpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>tf2</build_depend>
<build_depend>tf2_geometry_msgs</build_depend>

<!-- Execution dependencies -->
<exec_depend>rclcpp</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>
<exec_depend>tf2</exec_depend>
<exec_depend>tf2_geometry_msgs</exec_depend>
<exec_depend>libsdl2-dev</exec_depend> 

<!-- Testing -->
<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>

<export>
<build_type>ament_cmake</build_type>
<include>include</include>
</export>
</package>
